# acih-backend

./: .coveragerc  .flake8  .gitignore  .pylintrc  .ruff.toml  README.md  alembic.ini  pyproject.toml  pytest.ini  whitelist.txt
.github/workflows/: cleanup-on-delete.yml  cleanup.yml  deploy.yml  lint.yml  test.yml
envs/ci/: Dockerfile  docker-compose.yml
envs/ci/cleanup/: branch_on_delete.py  branch_on_forcepush.py  previous_runs.py  requirements.txt
envs/ci/lint/: Dockerfile  docker-compose.yml
envs/ci/test/: .env  Dockerfile  docker-compose.yml  example.env
envs/local/dev/: .env  docker-compose.yml  example.env
envs/local/test/: .env  docker-compose.yml  example.env
envs/qa/deploy/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml  (+1 more)
migrations/: env.py
migrations/versions/: 2023_10_10_1055-18d944595504_create_entity_table.py  2024_01_27_1239-be560fc34518_create_account_profile_password_hash_.py  2024_02_05_1403-432b2b7bb5ae_create_file_table.py  2024_02_12_1432-3229a38f7b40_create_session_table.py  2024_02_26_1634-fc81b2fd94cf_add_foreign_key_to_profile_columns.py  2024_02_29_1049-fb0a6d39cb9a_create_following_table.py  635775e36cd9_entity_migration.py
src/: app.py  config.py  placeholder.py
src/account/: __init__.py  controllers.py  enums.py  models.py  routes.py  schemas.py
src/auth/: controllers.py  dependencies.py  enums.py  models.py  routes.py  schemas.py
src/entity/: __init__.py  models.py  routes.py  schemas.py
src/feed/: __init__.py  routes.py
src/files/: constants.py  controllers.py  dependencies.py  enums.py  models.py  routes.py  schemas.py
src/following/: __init__.py  controllers.py  models.py  routes.py  schemas.py
src/minio/: __init__.py  routes.py
src/post/: __init__.py  routes.py  schemas.py
src/profile/: controllers.py  models.py  routes.py  schemas.py
src/search/: __init__.py  routes.py
src/shared/: __init__.py  database.py  datetime.py  enums.py  environment.py  exceptions.py  storage.py
tests/: conftest.py  test_it.py  test_root_endpoint.py
tests/account/: __init__.py  test_check_account_email.py  test_check_account_exists.py  test_check_profile_exists.py  test_create_account_endpoint.py
tests/auth/: __init__.py  test_create_session_endpoint.py  test_remove_session_endpoint.py
tests/entity/: __init__.py  test_entity_feature.py
tests/files/: __init__.py  test_download_file_endpoint.py  test_upload_file_endpoint.py
tests/following/: __init__.py  test_create_following_endpoint.py  test_get_followees_endpoint.py  test_get_followers_endpoint.py  test_get_following_counts.py  test_remove_followee_endpoint.py
tests/minio/: __init__.py  test_minio_feature.py
tests/profile/: __init__.py  test_get_profile_endpoint.py  test_get_profiles_endpoints.py  test_update_profile_endpoint.py
tests/utils/: __init__.py  database.py
(+1 files in other folders)
