[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
authors = ["Eugene <eugeneturkin@gmail.com>"]
description = "Backend for artist-centered image hosting."
name = "acih-backend"
readme = "README.md"
version = "0.1.0"


[tool.poetry.dependencies]
python = "3.11.*"


[tool.poetry.group.lint]
optional = true


[tool.poetry.group.lint.dependencies]
flake8 = "6.0.0"
mypy = "1.3.0"
pyenchant = "3.2.2"  # necessary for pylint spell checking
pylint = "2.17.4"
ruff = "0.0.272"
